--- a/react-leave-system/app/globals.css
+++ b/react-leave-system/app/globals.css
@@ -33,10 +33,15 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+.navItem {
+  height: 60px; 
 }
