--- a/react-leave-system/app/(login)/login.css
+++ b/react-leave-system/app/(login)/login.css
@@ -55,7 +55,7 @@ a {
 }
 
 body {
-  background-image: url(../../../pic/loginbackground.jpg);
+  background-image: url(../../pic/loginbackground.jpg);
   background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
